--- a/DesignerRHN/DesignerRHN-war/web/acercade.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/acercade.xhtml
@@ -13,7 +13,7 @@
                 <h:form id="form">
                     <p:panel  id="PanelTotal" header="Acerca de Designer Software" style="  position: absolute; width: 874px; height: 457px;" > 
                         <fieldset style="position: absolute; left: 5px; top: 70px; width: 430px; height: 170px; border-radius: 11px; ">
-                            <img src="Imagenes\logoDesigner2014face.jpg" style="border-radius: 11px" width="430" height="100" alt="Foto Usuario" />
+                            <img src="Imagenes\logoDesigner2014face.jpg" style="border-radius: 11px" width="430" height="100" alt="Foto Designer" />
                             <h:outputText value="#{controlAcercaDe.version}" style="position: absolute; left: 200px; top: 110px; width:180px ;height:50px; color: darkblue;font-weight: bold " />
                             <p:separator style="position: relative; border-color: darkblue; direction: ltr; top: 15px;"/>
                             <div>
